# underapproximation_type

./: .gitignore  README.md  dune-project  meta-config.json  test.sh
abstraction/: dune  normalprim.ml
ast/: dune  simpletypectx.ml  strid.ml  typectx.ml  underty.ml
autoverificaiton/: ast.ml  autov.ml  check.ml  dune
autoverificaiton/z3parser/: dune  pprint.ml
backend/: check.ml  dune  smtquery.ml
data/customstk_components/: _over.ml  concat_components.ml  concat_int_components.ml
data/debug/: output.v  stlc.v
data/issue/: singleton_unique.ml
data/predefined/: axioms.ml  coverage_typing.ml  normal_typing.ml  templates.ml
data/prim/: over.ml
data/subtyping/: complete_non_empty.ml  complete_non_empty_rev.ml  duplicate_non_emp.ml  duplicate_non_emp_rev.ml  leaf.ml  leaf_rev.ml  meta-config.json  rbleaf.ml  rbleaf_rev.ml  rbnode_single.ml  rbnode_single_rev.ml  sorted_non_emp.ml  sorted_non_emp_rev.ml  unique_non_emp.ml  unique_non_emp_rev.ml  (+1 more)
driver/: dune  inputstage.ml
env/: dune  zzenv.ml
frontend/: dune  overty.ml
frontend_opt/: dune  to_item.ml  to_prop.ml  to_raw_term.ml  to_typectx.ml
inference/: cegis.ml  dune  feature.ml  fvec_tab.ml
language/: dune  language.ml  simp.ml
preprocessing/: normal_id_typing.ml  normal_term_typing.ml
scripts/: infer.py
subtyping/: dune  subcty.ml
syntax/: constant.ml  lit.ml  prop.ml  raw_term.ml  rty.ml  typectx.ml
translate/: dune  term2normalanormal.ml
typecheck/: dune  overtycheck.ml  undercheck.ml  undersub.ml
typing/: dune  infer_prop.ml  itemcheck.ml  termcheck.ml  termsyn.ml
(+173 files in other folders)
